Now we can set saved filename

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="left">
                 <textarea type="url" id="addTaskAddr" rows="1" placeholder="http://.." required></textarea>
                 <div class="left" id="taskExtended">
-                    <div class="multitask">Press <span class="b">Ctrl</span> + <span class="b">Enter</span> for adding more than one task</div>
+                    <div class="multitask">Press <span class="b">Ctrl</span> + <span class="b">Enter</span> for adding more than one task. Add <span class="s">&nbsp;-&gt;&nbsp;%filename%</span> for setting saved file name</div>
                 </div>
             </div>
             <div class="right">
