Added check - extension is installed or not

--- a/wget-gui-light/index.html
+++ b/wget-gui-light/index.html
@@ -30,7 +30,7 @@
 
     <div id="tasklist"></div>
     
-    <div id="footer">Wget GUI Light <span class="button"><a id="bookmark" href="#" title="Move me to your bookmarks bar">Download this</a></span></div>
+    <div id="footer">Wget GUI Light <span class="button"><a id="bookmark" href="#" title="Move me to your bookmarks bar">Bookmark</a></span></div>
     
     <script type="text/javascript" src="version.js"></script>
     <script type="text/javascript" src="js/jquery.min.js"></script>
