--- a/wget-gui-light/index.html
+++ b/wget-gui-light/index.html
@@ -46,7 +46,7 @@
     <script type="text/javascript" src="version.js"></script>
     <script type="text/javascript" src="js/jquery.min.js"></script>
     <script type="text/javascript" src="js/jquery.cookie.min.js"></script>
-    <script type="text/javascript" src="js/url.js"></script>
+    <script type="text/javascript" src="js/url.min.js"></script>
     <script type="text/javascript" src="js/notifIt.js"></script>
     <script type="text/javascript" src="js/core.js"></script>
 </body>
