--- a/wget-gui-light/index.html
+++ b/wget-gui-light/index.html
@@ -6,10 +6,11 @@
     <meta name="robots" content="noindex, nofollow" />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <title>Download File</title>
-    <link rel="icon" type="image/png" id="favicon" href="img/favicon.png" />
-    <link rel="stylesheet" type="text/css" href="css/style.css" />
-    <link rel="stylesheet" type="text/css" href="css/progressbar.css" />
-    <link rel="stylesheet" type="text/css" href="css/notifIt.css" />
+    <link rel="icon" type="image/png" id="favicon" href="gui/img/favicon.png" />
+    <link rel="stylesheet" type="text/css" href="gui/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="gui/css/progressbar.css" />
+    <link rel="stylesheet" type="text/css" href="gui/css/notifIt.css" />
+    <link rel="stylesheet" type="text/css" href="gui/js/jquery.owl/jquery.owl.css?sad" />
 </head>
 <body>
     <div id="menu-button" class="close"><span>Close</span></div>
@@ -42,12 +43,13 @@
     </div>
 
     <div id="tasklist"></div>
-    
-    <script type="text/javascript" src="version.js"></script>
-    <script type="text/javascript" src="js/jquery.min.js"></script>
-    <script type="text/javascript" src="js/jquery.cookie.min.js"></script>
-    <script type="text/javascript" src="js/url.min.js"></script>
-    <script type="text/javascript" src="js/notifIt.js"></script>
-    <script type="text/javascript" src="js/core.js"></script>
+
+    <script type="text/javascript" src="settings.php?js"></script>
+    <script type="text/javascript" src="gui/js/jquery.min.js"></script>
+    <script type="text/javascript" src="gui/js/jquery.cookie.min.js"></script>
+    <script type="text/javascript" src="gui/js/url.min.js"></script>
+    <script type="text/javascript" src="gui/js/notifIt.js"></script>
+    <script type="text/javascript" src="gui/js/jquery.owl/jquery.owl.js"></script>
+    <script type="text/javascript" src="gui/js/core.js"></script>
 </body>
 </html>
