--- a/wget-gui-light/index.html
+++ b/wget-gui-light/index.html
@@ -1,55 +1,60 @@
 <!doctype html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="robots" content="noindex, nofollow" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
-    <title>Download File</title>
-    <link rel="icon" type="image/png" id="favicon" href="gui/img/favicon.png" />
-    <link rel="stylesheet" type="text/css" href="gui/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="gui/css/progressbar.css" />
-    <link rel="stylesheet" type="text/css" href="gui/css/notifIt.css" />
-    <link rel="stylesheet" type="text/css" href="gui/js/jquery.owl/jquery.owl.css?sad" />
+  <meta charset="utf-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="robots" content="noindex, nofollow" />
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
+  <title>Download File</title>
+  <link rel="icon" type="image/png" id="favicon" href="gui/img/favicon.png" />
+  <link rel="stylesheet" type="text/css" href="gui/css/style.css" />
+  <link rel="stylesheet" type="text/css" href="gui/css/progressbar.css" />
+  <link rel="stylesheet" type="text/css" href="gui/css/font-awesome.min.css" />
+  <link rel="stylesheet" type="text/css" href="gui/js/jquery.owl/jquery.owl.css" />
 </head>
 <body>
-    <div id="menu-button" class="close"><span>Close</span></div>
-    <div id="menu" class="close">
-        <ul>
-            <li><a id="bookmark" href="#" title="Move me to your bookmarks bar">Bookmark "Download"</a></li>
-        </ul>
-        <div id="historyList">
-            <h2>Recent tasks:</h2>
-            <ul></ul>
-        </div>
-        <div class="bottom">
-            Wget GUI Light v<span class="projectCurrentVersion">...</span>
-        </div>
+  <div id="menu-button" class="close"><i class="fa fa-bars fa-3x"></i><span>Close</span></div>
+  <div id="menu" class="close">
+    <ul>
+      <li><a id="bookmark" href="#" title="Move me to your bookmarks bar">Bookmark "Download"</a></li>
+    </ul>
+    <div id="downloadedFilesList">
+      <h2>Downloaded files:</h2>
+      <ul></ul>
     </div>
-    
-    <div id="urlbar">
-        <div class="title">Download file:</div>
-        <div id="inputData">
-            <div class="left">
-                <textarea type="url" id="addTaskAddr" rows="1" placeholder="http://.." required></textarea>
-                <div class="left" id="taskExtended">
-                    <div class="multitask">Press <span class="b">Ctrl</span> + <span class="b">Enter</span> for adding more than one task</div>
-                </div>
-            </div>
-            <div class="right">
-                <input type="button" id="addTaskBtn" value="Add Task" />
-            </div>
-        </div>
+    <div class="bottom">
+      Wget GUI Light <span class="projectCurrentVersion"></span>
     </div>
+  </div>
+  
+  <div id="urlbar">
+    <div class="title">Download file:</div>
+    <div id="inputData">
+      <div class="left">
+        <textarea type="url" id="addTaskAddr" rows="1" placeholder="http://.."></textarea>
+        <div class="left" id="taskExtended">
+          <div class="multitask">Press <span class="b">Ctrl</span> + <span class="b">Enter</span> if you want add more than one task</div>
+        </div>
+      </div>
+      <div class="right">
+        <input type="button" id="addTaskBtn" value="Add Task" />
+      </div>
+    </div>
+    <div id="historyList">
+      <h2>Recent tasks:</h2>
+      <ul></ul>
+    </div>
+  </div>
 
-    <div id="tasklist"></div>
+  <div id="tasklist"></div>
 
-    <script type="text/javascript" src="settings.php?js"></script>
-    <script type="text/javascript" src="gui/js/jquery.min.js"></script>
-    <script type="text/javascript" src="gui/js/jquery.cookie.min.js"></script>
-    <script type="text/javascript" src="gui/js/url.min.js"></script>
-    <script type="text/javascript" src="gui/js/notifIt.js"></script>
-    <script type="text/javascript" src="gui/js/jquery.owl/jquery.owl.js"></script>
-    <script type="text/javascript" src="gui/js/core.js"></script>
+  <script type="text/javascript" src="settings.php?js"></script>
+  <script type="text/javascript" src="gui/js/jquery.min.js"></script>
+  <script type="text/javascript" src="gui/js/jquery.cookie.min.js"></script>
+  <script type="text/javascript" src="gui/js/url.min.js"></script>
+  <script type="text/javascript" src="gui/js/notifIt.js"></script>
+  <script type="text/javascript" src="gui/js/jquery.owl/jquery.owl.js"></script>
+  <script type="text/javascript" src="gui/l10n.js"></script>
+  <script type="text/javascript" src="gui/js/core.js"></script>
 </body>
 </html>
