--- a/wget-gui-light/index.html
+++ b/wget-gui-light/index.html
@@ -6,13 +6,15 @@
   <meta name="robots" content="noindex, nofollow" />
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
   <title>Download File</title>
-  <link rel="icon" type="image/png" id="favicon" href="gui/img/favicon.png" />
+  <link rel="icon" type="image/png" id="favicon" href="" />
   <link rel="stylesheet" type="text/css" href="gui/css/style.css" />
   <link rel="stylesheet" type="text/css" href="gui/css/progressbar.css" />
   <link rel="stylesheet" type="text/css" href="gui/css/font-awesome.min.css" />
   <link rel="stylesheet" type="text/css" href="gui/js/jquery.owl/jquery.owl.css" />
 </head>
 <body>
+  <noscript><div id="nojs"><div><h1>Please enable JavaScript and reload the page</h1><a href="http://j.mp/1frz2qm" target="_blank">How enable Javascript</div></div></noscript>
+
   <div id="menu-button" class="close"><i class="fa fa-bars fa-3x"></i><span>Close</span></div>
   <div id="menu" class="close">
     <ul>
